added client profile roles